--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="mbr-section content7 cid-rhiUn8qZM8" id="content7-o">
+<section class="engine"><a href="https://mobirise.info/g">build a site</a></section><section class="mbr-section content7 cid-rhiUn8qZM8" id="content7-o">
           
     
 
